--- a/src/main/resources/templates/editdevice.html
+++ b/src/main/resources/templates/editdevice.html
@@ -49,7 +49,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		
 		<label for="deleted">Deleted:</label>
 		<input type="text" id="deleted" th:field="*{deleted}" />
-		<div style="clear: both; display: block; height: 10px;"></div>
+		<div style="clear: both; display: block; height: 10px;">(false=working / true=deleted)</div>
+		
+		<p></p>
 		
 		<input type="submit" value="Save" class="btn btn-success"></input>	
 	</form>		
