commit 4, demo deployment

--- a/src/main/resources/templates/editperson.html
+++ b/src/main/resources/templates/editperson.html
@@ -24,7 +24,11 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<label for="lastName">Last Name:</label>
 		<input type="text" id="lastName" th:field="*{lastName}" />
 		<div style="clear: both; display: block; height: 10px;"></div>
-			
+		
+		<label for="username">Username:</label>
+		<input type="text" id="username" th:field="*{username}" />
+		<div style="clear: both; display: block; height: 10px;"></div>
+		
 		<label for="notes">Notes:</label>
 		<input type="text" id="notes" th:field="*{notes}" />
 		<div style="clear: both; display: block; height: 10px;"></div>
