--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		</tr>
 	</table>
 	<div></div>
-	<div>
+	<div sec:authorize="hasAuthority('ADMIN')">
 		<h3>Dev Notes:</h3>
 		<table>
 			<tr><td>- CRITICAL BACKEND missing a real database</td></tr>
