--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -4,6 +4,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="css/boostrap.min.css" th:href="@{/css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="css/main.css" th:href="@{/css/main.css}" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 <title>Device Manager - Categories</title>
 </head>
 <body>
@@ -13,13 +15,16 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<a href="/" class="btn btn-info">Devices</a>
 		<a href="/persons" class="btn btn-info">Persons</a>
 		<a href="/locations" class="btn btn-info">Locations</a>
-		<a sec:authorize="hasAuthority('ADMIN')" href="/config" class="btn btn-warning">Configure</a>
 		</h2>
 	</div>
 	<p></p>
 	<div sec:authorize="hasAuthority('ADMIN')"><a href="/categories/addcategory" class="btn btn-primary">New Category...</a></div>
 	<p></p>
-	<div><label for="search">Search: &nbsp; </label><input type="text" /> not yet implemented</div>
+		<form th:action="@{/categories/search}" method="get">
+		<label for="search">Search: </label>
+		<input type="text" name="keyword" placeholder="Search categories" size="30" />
+		<button type="submit" class="btn btn-info">Search</button>
+	</form>
 	<p></p>
 	<table class="table table-striped" style="width: 50%">
 		<tr>
@@ -28,11 +33,11 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			<th sec:authorize="hasAuthority('ADMIN')">edit</th>
 			<th sec:authorize="hasAuthority('ADMIN')">del</th>
 		</tr>
-		<tr th:each ="category : ${categories}">
+		<tr th:each ="category : ${categorylist}" th:field="${category}">
 			<td th:text="${category.cname}" />
 			<td th:text="${category.notes}" />
-			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/categories/editcategory/{id}(id=${category.categoryId})}" class="btn btn-primary">Edit</a></td>
-			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/categories/delete/{id}(id=${category.categoryId})}" class="btn btn-danger">Del</a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/categories/editcategory/{id}(id=${category.categoryId})}" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/categories/delete/{id}(id=${category.categoryId})}" class="btn btn-danger"><i class="bi bi-trash"></i></a></td>
 		</tr>
 	</table>
 </body>
