--- a/src/main/resources/templates/editlocation.html
+++ b/src/main/resources/templates/editlocation.html
@@ -4,6 +4,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="css/boostrap.min.css" th:href="@{/css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="css/main.css" th:href="@{/css/main.css}" />
 <title>Device Manager - Edit Location</title>
 </head>
 <body>
@@ -39,7 +40,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		
 		<input type="submit" value="Save" class="btn btn-success"></input>	
 	</form>		
-	<a href="/" class="btn btn-secondary">Cancel</a>
+	<a href="/locations" class="btn btn-secondary">Cancel</a>
 
 </body>
 </html>
