--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -4,6 +4,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="css/boostrap.min.css" th:href="@{/css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="css/main.css" th:href="@{/css/main.css}" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 <title>Device Manager - Persons</title>
 </head>
 <body>
@@ -13,13 +15,16 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<a href="/" class="btn btn-info">Devices</a>
 		<a href="/locations" class="btn btn-info">Locations</a>
 		<a href="/categories" class="btn btn-info">Categories</a>
-		<a sec:authorize="hasAuthority('ADMIN')" href="/config" class="btn btn-warning">Configure</a>
 		</h2>
 	</div>
 	<p></p>
 	<div sec:authorize="hasAuthority('ADMIN')"><a href="/persons/addperson" class="btn btn-primary">New Person...</a></div>
 	<p></p>
-	<div><label for="search">Search: &nbsp; </label><input type="text" /> not yet implemented</div>
+	<form th:action="@{/persons/search}" method="get">
+		<label for="search">Search: </label>
+		<input type="text" name="keyword" placeholder="Search persons" size="30" />
+		<button type="submit" class="btn btn-info">Search</button>
+	</form>
 	<p></p>
 	<table class="table table-striped" style="width: 50%">
 		<tr>
@@ -31,14 +36,14 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			<th sec:authorize="hasAuthority('ADMIN')">edit</th>
 			<th sec:authorize="hasAuthority('ADMIN')">del</th>
 		</tr>
-		<tr th:each ="person : ${persons}">
+		<tr th:each ="person : ${personlist}" th:field="${person}">
 			<td th:text="${person.email}" />
 			<td th:text="${person.firstName} + ' ' + ${person.lastName}" />
 			<td th:text="${person.username}" />
 			<td th:text="${person.role}" />
 			<td th:text="${person.notes}" />
-			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/persons/editperson/{id}(id=${person.personId})}" class="btn btn-primary">Edit</a></td>
-			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/persons/delete/{id}(id=${person.personId})}" class="btn btn-danger">Del</a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/persons/editperson/{id}(id=${person.personId})}" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/persons/delete/{id}(id=${person.personId})}" class="btn btn-danger"><i class="bi bi-trash"></i></a></td>
 		</tr>
 	</table>
 </body>
