--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -9,7 +9,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <title>Device Manager - Persons</title>
 </head>
 <body>
-	<h1>Device Manager <a href="/logout" class="btn btn-danger">Logout</a> <a href="/changepwd" class="btn btn-danger">Change Password</a></h1>
+	<h1>Device Manager <a href="/logout" class="btn btn-danger">Logout</a> <!--<a href="/changepwd" class="btn btn-danger">Change Password</a> --></h1>
 	<div>
 		<h2>Persons
 		<a href="/" class="btn btn-info">Devices</a>
