--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <title>Device Manager</title>
 </head>
 <body>
-	<h1>Device Manager <a href="/logout" class="btn btn-danger">Logout</a> <a href="/changepwd" class="btn btn-danger">Change Password</a></h1>
+	<h1>Device Manager <a href="/logout" class="btn btn-danger">Logout</a> <!--<a href="/changepwd" class="btn btn-danger">Change Password</a> --></h1>
 	<div>
 		<h2>Devices		
 		<a href="/persons" class="btn btn-info">Persons</a>
